Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,13 @@ steps:
   displayName: 'Run a multi-line script'
   
 - bash: |
-    docker login -u $(user) -p $(password)
     docker build ./acceleration-dv/. -t saba10/acceleration-dv:latest
     docker build ./acceleration-a/. -t saba10/acceleration-a:latest
     docker build ./acceleration-calc/. -t saba10/acceleration-calc:latest
     docker images
+
+- bash: |
+    docker login -u $(user) -p $(password)
+    docker push saba10/acceleration-dv:latest
+    docker push saba10/acceleration-a:latest
+    docker push saba10/acceleration-calc:latest
