--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,23 +13,20 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+stages:
+- stage: CI
+  displayName: Build stage
+  jobs:
+  - job: BuildJob
+      steps:
+      - bash: |
+          docker build ./acceleration-dv/. -t saba10/acceleration-dv:latest
+          docker build ./acceleration-a/. -t saba10/acceleration-a:latest
+          docker build ./acceleration-calc/. -t saba10/acceleration-calc:latest
+          docker images
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-  
-- bash: |
-    docker build ./acceleration-dv/. -t saba10/acceleration-dv:latest
-    docker build ./acceleration-a/. -t saba10/acceleration-a:latest
-    docker build ./acceleration-calc/. -t saba10/acceleration-calc:latest
-    docker images
-
-- bash: |
-    docker login -u $(user) -p $(password)
-    docker push saba10/acceleration-dv:latest
-    docker push saba10/acceleration-a:latest
-    docker push saba10/acceleration-calc:latest
+      - bash: |
+          docker login -u $(user) -p $(password)
+          docker push saba10/acceleration-dv:latest
+          docker push saba10/acceleration-a:latest
+          docker push saba10/acceleration-calc:latest
