Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,16 +17,16 @@ stages:
 - stage: CI
   displayName: Build stage
   jobs:
-  - job: BuildJob
-      steps:
-      - bash: |
-          docker build ./acceleration-dv/. -t saba10/acceleration-dv:latest
-          docker build ./acceleration-a/. -t saba10/acceleration-a:latest
-          docker build ./acceleration-calc/. -t saba10/acceleration-calc:latest
-          docker images
+  - job: CIJob
+    steps:
+    - bash: |
+        docker build ./acceleration-dv/. -t saba10/acceleration-dv:latest
+        docker build ./acceleration-a/. -t saba10/acceleration-a:latest
+        docker build ./acceleration-calc/. -t saba10/acceleration-calc:latest
+        docker images
 
-      - bash: |
-          docker login -u $(user) -p $(password)
-          docker push saba10/acceleration-dv:latest
-          docker push saba10/acceleration-a:latest
-          docker push saba10/acceleration-calc:latest
+    - bash: |
+        docker login -u $(user) -p $(password)
+        docker push saba10/acceleration-dv:latest
+        docker push saba10/acceleration-a:latest
+        docker push saba10/acceleration-calc:latest
