--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ trigger:
 - main
 
 pool:
-  name: Default
+  vmImage: ubuntu-latest
 
 stages:
 # - stage: CI
@@ -34,7 +34,7 @@ stages:
 - stage: CD
   displayName: CD stage
   pool:
-    vmImage: ec2-minikube-agent
+    name: Default
   jobs:
   - job: CDJob
     steps:
