--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,5 +44,5 @@ stages:
       inputs:
         secureFile: 'ec2.pem'
     - bash: |
-        ssh -i $(sshkey) ec2-user@44.195.2.139 ls
+        sudo ls
 
