--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,8 @@ stages:
       inputs:
         secureFile: 'ec2.pem'
     - bash: |
-        sudo helm upgrade acceleration-dv
-        sudo helm upgrade acceleration-a
-        sudo helm upgrade acceleration-calc
-        sudo helm list
+        sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-dv"
+        sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-a"
+        sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-calc"
+        sudo -H -u root bash -c "/usr/local/bin/helm list"
 
