--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
       inputs:
         secureFile: 'ec2.pem'
     - bash: |
-        cd /root/join-devops-challenge/ && git pull origin main:main
+        sudo -H -u root bash -c "cd /root/join-devops-challenge/ && git pull origin main:main"
         sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-dv /root/join-devops-challenge/helm/acceleration-dv"
         sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-a /root/join-devops-challenge/helm/acceleration-a"
         sudo -H -u root bash -c "/usr/local/bin/helm upgrade acceleration-calc /root/join-devops-challenge/helm/acceleration-calc"
