--- a/helm/acceleration-calc/templates/deployment.yaml
+++ b/helm/acceleration-calc/templates/deployment.yaml
@@ -33,8 +33,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          #command: ["/bin/bash", "-c"]
-          #args: ["WEB_PORT={{ .Values.service.port }} yarn start"]
+          command: ["/bin/bash", "-c"]
+          args: ["WEB_PORT={{ .Values.service.port }} yarn start"]
           livenessProbe:
             httpGet:
               path: /health
