--- a/helm/acceleration-a/templates/deployment.yaml
+++ b/helm/acceleration-a/templates/deployment.yaml
@@ -39,8 +39,9 @@ spec:
             httpGet:
               path: /health
               port: {{ .Values.service.port }}
-            initialDelaySeconds: 3
-            periodSeconds: 3
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 10
           ports:
             - name: {{ .Values.service.name }}
               containerPort: {{ .Values.service.port }}
