--- a/acceleration-dv/Dockerfile
+++ b/acceleration-dv/Dockerfile
@@ -1,14 +1,19 @@
-FROM node
-
-MAINTAINER sabasabarish.10@gmail.com
+FROM node AS stage1
 
 COPY . .
 
-RUN yarn && \
-    yarn install && \
+RUN yarn install && \
     yarn build
+
+
+FROM node:slim
+
+MAINTAINER sabasabarish.10@gmail.com
+
+COPY --from=stage1 /dist /dist
+COPY --from=stage1 package.json ./
 
 EXPOSE 3001
 
 ENTRYPOINT  ["/bin/bash", "-c"]
-CMD ["yarn dev"]
+CMD ["WEB_PORT=3001 yarn start"]
