modified ingress and commented CI stage

--- a/helm/acceleration-calc/values.yaml
+++ b/helm/acceleration-calc/values.yaml
@@ -57,6 +57,10 @@ ingress:
       paths:
         - path: /calc
           pathType: ImplementationSpecific
+    - host: 44.195.2.139
+      paths:
+        - path: /calc
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
