--- a/helm/acceleration-calc/values.yaml
+++ b/helm/acceleration-calc/values.yaml
@@ -53,14 +53,14 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    # - host: calc.local
-    #   paths:
-    #     - path: /calc
-    #       pathType: ImplementationSpecific
-    - host: 44.195.2.139
+    - host: calc.local
       paths:
         - path: /calc
           pathType: ImplementationSpecific
+    # - host: 44.195.2.139
+    #   paths:
+    #     - path: /calc
+    #       pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
